src/objects/POS_Tender_Type__c.object
<CustomObject>
    <fields>
        <fullName>c_cash_credit_flag__c</fullName>
        <label>Cash credit flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_open_ticket_flag__c</fullName>
        <label>Open ticket flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>POS Tender Types</relationshipLabel>
        <relationshipName>POS_Tender_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tender_type_desc__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>POS Tender Type</label>
    <nameField>
        <displayFormat>PTT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Tender Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>